# Android-ndk-camera-zh

./: .gitignore  README  settings.gradle
.VSCodeCounter/2023-04-04_03-08-14/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
app/: build.gradle
app/src/androidTest/java/com/qi/tcamera/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  camera_engine.cpp  camera_engine.h  camera_image_reader.cpp  camera_image_reader.h  camera_listeners.cpp  camera_listeners.h  camera_surface.cpp  camera_surface.h  native-lib.cpp  native-log.h  ncamera.cpp  ncamera.h
app/src/main/cpp/net/: tcp_node_client.cpp  tcp_node_client.h  tcp_node_server.cpp  tcp_node_server.h
app/src/main/java/com/qi/tcamera/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/qi/tcamera/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
